# pgrap

./: .gitignore  .gitmodules  CMakeLists.txt  README.org
src/: hs_match.cpp  hs_match.hpp  pgrap.cpp  pgrap.hpp  simple_match.cpp  simple_match.hpp  stand_match.cpp  stand_match.hpp  util.hpp
